--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,9 @@ name: Alain's Tech Blog
 description: 
   This is a blog of someone passionate about technology who wants to share some of the things he knows
   about Application Development, Integration, Cloud, Big Data and Digital Transformation
-url : "https://victoeywilly.github.io"
 baseurl: "" # the subpath of your site, e.g. /blog
-github_username:  victoeywilly
-remote_theme : alainpham/alainpham
+github_username:  alainpham
+
 # jekyll-paginate configuration
 paginate: 10
 
@@ -41,3 +40,4 @@ excerpt_separator: <!--more-->
 author: http://www.linkedin.com/in/alainpham
 
 host: 0.0.0.0
+
